Got rid of unused modules  - numberPicker  - compatSwitch
Completed in-app update feature
Bumped version to 205

--- a/turios/src/main/res/values/strings.xml
+++ b/turios/src/main/res/values/strings.xml
@@ -157,6 +157,7 @@
     <string name="title_activity_maps">Map</string>
     <string name="new_update">Ny opdatering</string>
     <string name="download_now">Hent nu</string>
+    <string name="downloading_update">Henter opdatering</string>
 
 
 </resources>
